--- a/04_entryForm/index.html
+++ b/04_entryForm/index.html
@@ -15,21 +15,21 @@
       <fieldset name="carInformation">
         <legend>車種情報入力</legend>
 
-        <label for="maker">メーカー名</label>
+        <label for="maker">メーカー名<span class="requiredText">必須</span></label>
         <select name="maker" id="maker" required data-js="makerSelectMenu">
           <option value="" selected>選択してください</option>
         </select>
         <p class="hide attentionText" data-js="makerAttention">メーカー名を入力してください</p>
 
 
-        <label for="carName">車種名<span class="info">※メーカー名を選択後に選択できます</span></label>
+        <label for="carName">車種名<span class="requiredText">必須</span><span class="info">※メーカー名を選択後に選択できます</span></label>
         <select name="carName" id="carName" data-js="carNameSelectMenu" required disabled>
           <option value="" selected>選択してください</option>
         </select>
         <p class="hide attentionText" data-js="carNameAttention">車種名を入力してください</p>
 
 
-        <label for="modelYear">年式</label>
+        <label for="modelYear">年式<span class="requiredText">必須</span></label>
         <select name="modelYear" id="modelYear" data-js="modelYearSelectMenu" required>
           <option value="" selected>選択してください</option>
         </select>
@@ -52,7 +52,7 @@
           </select>
         </div>
 
-        <label for="mileage">走行距離</label>
+        <label for="mileage">走行距離<span class="requiredText">必須</span></label>
         <select name="mileage" id="mileage" data-js="mileageSelectMenu" required>
           <option value="" selected>選択してください</option>
         </select>
@@ -68,27 +68,23 @@
 
       <fieldset name="customerInformation" class="hide">
         <legend>お客様情報の入力</legend>
-        <label for="customerName">お名前
-        </label>
+        <label for="customerName">お名前<span class="requiredText">必須</span></label>
         <input type="text" name="customerName" id="customerName" autocomplete="name" required data-js="customerNameInput">
         <p class="hide attentionText" data-js="customerNameAttention">お名前を入力してください</p>
 
-        <label for="customerPostcode">郵便番号
-        </label>
+        <label for="customerPostcode">郵便番号<span class="requiredText">必須</span></label>
         <input type="text" name="customerPostcode" id="customerPostcode" autocomplete="postal-code" required data-js="customerPostcodeInput">
         <p class="hide attentionText" data-js="customerPostcodeAttention">郵便番号を入力してください</p>
 
-        <label for="customerTel">電話番号
-        </label>
+        <label for="customerTel">電話番号<span class="requiredText">必須</span></label>
         <input type="tel" name="customerTel" id="customerTel" autocomplete="tel" required  data-js="customerTelInput">
         <p class="hide attentionText" data-js="customerTelAttention">電話番号を入力してください</p>
 
-        <label for="customerEmail">メールアドレス
-        </label>
+        <label for="customerEmail">メールアドレス<span class="requiredText">必須</span></label>
         <input type="email" name="customerEmail" id="customerEmail" autocomplete="email" placeholder="test@example.com" required data-js="customerEmailInput">
         <p class="hide attentionText" data-js="customerEmailAttention">メールアドレスを入力してください</p>
 
-        <label for="campaign">キャンペーンに応募しますか？</label>
+        <label for="campaign">キャンペーンに応募しますか？<span class="requiredText">必須</span></label>
 
         <label>
           <input type="radio" name="campaign" value="yes" required data-js="campaignInput">応募する
