入力内容変更ボタンを作成&enterでsubmitしないように修正

--- a/04_entryForm/index.html
+++ b/04_entryForm/index.html
@@ -61,11 +61,6 @@
         <button type="button" data-js="step1NextButton">次へ</button>
       </fieldset>
 
-
-
-
-
-
       <fieldset name="customerInformation" class="hide">
         <legend>お客様情報の入力</legend>
         <label for="customerName">お名前<span class="requiredText">必須</span></label>
@@ -112,8 +107,8 @@
           <p data-js="customerEmailConfirmationResult">メールアドレス：</p>
           <p data-js="campaignConfirmationResult">キャンペーンに応募しますか？：</p>
         </div>
-        <button type="submit">申し込む</button>
-        <button type="button">入力内容を変更する</button>
+        <button type="button" data-js="submitButton">申し込む</button>
+        <button type="button" data-js="inputChangeButton">入力内容を変更する</button>
       </div>
     </form>
   </div>
