--- a/04_entryForm/index.html
+++ b/04_entryForm/index.html
@@ -13,34 +13,41 @@
   <div class="wrapper">
     <form action="" method="post">
       <fieldset name="carInformation">
-        <legend>車種情報入力</legend>
+        <legend>1. 車種情報入力</legend>
 
         <label for="maker">メーカー名<span class="requiredText">必須</span></label>
         <select name="maker" id="maker" required data-js="makerSelectMenu">
           <option value="" selected>選択してください</option>
         </select>
-        <p class="hide attentionText" data-js="makerAttention">メーカー名を入力してください</p>
+        <p class="hide attentionText" data-js="makerAttention">メーカー名を選択してください</p>
 
 
         <label for="carName">車種名<span class="requiredText">必須</span><span class="info">※メーカー名を選択後に選択できます</span></label>
         <select name="carName" id="carName" data-js="carNameSelectMenu" required disabled>
           <option value="" selected>選択してください</option>
         </select>
-        <p class="hide attentionText" data-js="carNameAttention">車種名を入力してください</p>
+        <p class="hide attentionText" data-js="carNameAttention">車種名を選択してください</p>
 
 
         <label for="modelYear">年式<span class="requiredText">必須</span></label>
         <select name="modelYear" id="modelYear" data-js="modelYearSelectMenu" required>
           <option value="" selected>選択してください</option>
         </select>
-        <p class="hide attentionText" data-js="modelYearAttention">年式を入力してください</p>
+        <p class="hide attentionText" data-js="modelYearAttention">年式を選択してください</p>
 
 
-        <label name="detail" for="detail">詳細を指定する</label>
+
+        <label for="mileage">走行距離<span class="requiredText">必須</span></label>
+        <select name="mileage" id="mileage" data-js="mileageSelectMenu" required>
+          <option value="" selected>選択してください</option>
+        </select>
+        <p class="hide attentionText" data-js="mileageAttention">走行距離を選択してください</p>
+
+        <label name="detail" for="detail">詳細な情報を入力する</label>
         <input type="checkbox" id="detail"></input>
 
         <div class="detailBox" data-js="detailBox">
-          <label for="model">モデル・グレード<span class="info">※上記3点を選択後に選択できます</span></label>
+          <label for="model">モデル・グレード<span class="info">※メーカー名・車種名・年式を選択後に選択できます</span></label>
           <select name="model" id="model" data-js="modelSelectMenu" disabled>
             <option value="">選択してください</option>
             <option value="unknown">わからない</option>
@@ -52,32 +59,26 @@
           </select>
         </div>
 
-        <label for="mileage">走行距離<span class="requiredText">必須</span></label>
-        <select name="mileage" id="mileage" data-js="mileageSelectMenu" required>
-          <option value="" selected>選択してください</option>
-        </select>
-        <p class="hide attentionText" data-js="mileageAttention">走行距離を入力してください</p>
-
         <button type="button" data-js="step1NextButton">次へ</button>
       </fieldset>
 
       <fieldset name="customerInformation" class="hide">
-        <legend>お客様情報の入力</legend>
+        <legend>2. お客様情報の入力</legend>
         <label for="customerName">お名前<span class="requiredText">必須</span></label>
         <input type="text" name="customerName" id="customerName" autocomplete="name" required data-js="customerNameInput">
-        <p class="hide attentionText" data-js="customerNameAttention">お名前を入力してください</p>
+        <p class="hide attentionText" data-js="customerNameAttention">お名前を正しく入力してください</p>
 
-        <label for="customerPostcode">郵便番号<span class="requiredText">必須</span></label>
+        <label for="customerPostcode">郵便番号<span class="requiredText">必須</span><span class="info">※ハイフンなしで入力してください</span></label>
         <input type="text" name="customerPostcode" id="customerPostcode" autocomplete="postal-code" required data-js="customerPostcodeInput">
-        <p class="hide attentionText" data-js="customerPostcodeAttention">郵便番号を入力してください</p>
+        <p class="hide attentionText" data-js="customerPostcodeAttention">郵便番号を正しく入力してください</p>
 
-        <label for="customerTel">電話番号<span class="requiredText">必須</span></label>
+        <label for="customerTel">電話番号<span class="requiredText">必須</span><span class="info">※ハイフンなしで入力してください</span></label>
         <input type="tel" name="customerTel" id="customerTel" autocomplete="tel" required  data-js="customerTelInput">
-        <p class="hide attentionText" data-js="customerTelAttention">電話番号を入力してください</p>
+        <p class="hide attentionText" data-js="customerTelAttention">電話番号を正しく入力してください</p>
 
         <label for="customerEmail">メールアドレス<span class="requiredText">必須</span></label>
         <input type="email" name="customerEmail" id="customerEmail" autocomplete="email" placeholder="test@example.com" required data-js="customerEmailInput">
-        <p class="hide attentionText" data-js="customerEmailAttention">メールアドレスを入力してください</p>
+        <p class="hide attentionText" data-js="customerEmailAttention">メールアドレスを正しく入力してください</p>
 
         <label for="campaign">キャンペーンに応募しますか？<span class="requiredText">必須</span></label>
 
